--- a/ironman/package.xml
+++ b/ironman/package.xml
@@ -41,15 +41,21 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>hsmrs_framework</build_depend>
+  <build_depend>kobuki_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>hsmrs_framework</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>hsmrs_framework</run_depend>
+  <run_depend>kobuki_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>hsmrs_framework</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
+  <run_depend>sensor_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
