--- a/hulk/package.xml
+++ b/hulk/package.xml
@@ -22,10 +22,10 @@
   <!-- <url type="website">http://wiki.ros.org/hulk</url> -->
 
 
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
+  <!-- Auhulk tags are optional, mutiple are allowed, one per tag -->
+  <!-- Auhulks do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <!-- <auhulk email="jane.doe@example.com">Jane Doe</auhulk> -->
 
 
   <!-- The *_depend tags are used to specify dependencies -->
