--- a/husky/package.xml
+++ b/husky/package.xml
@@ -45,6 +45,7 @@
   <build_depend>kobuki_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend>
   <build_depend>sensor_msgs</build_depend>
@@ -53,6 +54,7 @@
   <run_depend>kobuki_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>ar_track_alvar</run_depend>
   <run_depend>sensor_msgs</run_depend>
