--- a/hsmrs_rosjava_bindings/CMakeLists.txt
+++ b/hsmrs_rosjava_bindings/CMakeLists.txt
@@ -9,12 +9,13 @@ project(hsmrs_rosjava_bindings)
 # Catkin
 ##############################################################################
 
-find_package(catkin REQUIRED rosjava_build_tools)
+#find_package(catkin REQUIRED rosjava_build_tools)
 
 # Set the gradle targets you want catkin's make to run by default, e.g.
 #   catkin_rosjava_setup(installApp)
 # Note that the catkin_create_rosjava_xxx scripts will usually automatically
 # add tasks to this for you when you create subprojects.
+
 catkin_rosjava_setup(publishMavenJavaPublicationToMavenRepository)
 
 catkin_package()
