--- a/hsmrs_rosjava_bindings/CMakeLists.txt
+++ b/hsmrs_rosjava_bindings/CMakeLists.txt
@@ -3,22 +3,21 @@
 ##############################################################################
 
 cmake_minimum_required(VERSION 2.8.3)
-#project(hsmrs_rosjava_bindings)
+project(hsmrs_rosjava_bindings)
 
 ##############################################################################
 # Catkin
 ##############################################################################
 
-#find_package(catkin REQUIRED rosjava_build_tools)
+find_package(catkin REQUIRED rosjava_build_tools)
 
 # Set the gradle targets you want catkin's make to run by default, e.g.
 #   catkin_rosjava_setup(installApp)
 # Note that the catkin_create_rosjava_xxx scripts will usually automatically
 # add tasks to this for you when you create subprojects.
+catkin_rosjava_setup(publishMavenJavaPublicationToMavenRepository)
 
-#catkin_rosjava_setup(publishMavenJavaPublicationToMavenRepository)
-
-#catkin_package()
+catkin_package()
 
 ##############################################################################
 # Installation
@@ -26,5 +25,5 @@ cmake_minimum_required(VERSION 2.8.3)
 
 # Change this to match the maven group name you have specified in the 
 # allprojects closure the root build.gradle
-#install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_MAVEN_DESTINATION}/com/github/rosjava/${PROJECT_NAME}/ 
-#        DESTINATION ${CATKIN_GLOBAL_MAVEN_DESTINATION}/com/github/rosjava/${PROJECT_NAME})
+install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_MAVEN_DESTINATION}/com/github/rosjava/${PROJECT_NAME}/ 
+        DESTINATION ${CATKIN_GLOBAL_MAVEN_DESTINATION}/com/github/rosjava/${PROJECT_NAME})
