--- a/hermes/package.xml
+++ b/hermes/package.xml
@@ -22,10 +22,10 @@
   <!-- <url type="website">http://wiki.ros.org/hermes</url> -->
 
 
-  <!-- Auhermes tags are optional, mutiple are allowed, one per tag -->
-  <!-- Auhermess do not have to be maintianers, but could be -->
+  <!-- Author tags are optional, mutiple are allowed, one per tag -->
+  <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <!-- <auhermes email="jane.doe@example.com">Jane Doe</auhermes> -->
+  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
 
   <!-- The *_depend tags are used to specify dependencies -->
@@ -42,7 +42,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>hsmrs_framework</build_depend>
-  <build_depend>kobuki_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
@@ -50,7 +49,6 @@
   <build_depend>sensor_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>hsmrs_framework</run_depend>
-  <run_depend>kobuki_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
